syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink/v2/core/services/llo";

package llo;

message AttestedRetirementReport {
    bytes retirementReport = 1;
    repeated AttributedOnchainSignature sigs = 2;
}

message AttributedOnchainSignature {
	bytes signature = 1;
	uint32 signer = 2;
}

